openai version fix (#129)
* talk with podcast

* added talk-with-podcast

* imgs

* updated readme

* added requirements file

* added support for Langroid

* typo

* requirements update

* path and colab fix

* sentiment link fix

* comments in colab

* fix

* description change

* doc link fix

* talk-with-wikipedia

* added pylinting

* added pylinting

* removed pylint

--- a/examples/parent_document_retriever/main.ipynb
+++ b/examples/parent_document_retriever/main.ipynb
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "!pip install -U \"langchain==0.0.344\" openai tiktoken lark datasets sentence_transformers FlagEmbedding lancedb -qq"
+    "!pip install -U \"langchain==0.0.344\" \"openai==0.28\" tiktoken lark datasets sentence_transformers FlagEmbedding lancedb -qq"
    ]
   },
   {
@@ -970,7 +970,7 @@
    },
    "outputs": [],
    "source": [
-    "qa = RetrievalQA.from_chain_type(llm=OpenAI(),\n",
+    "qa = RetrievalQA.from_chain_type(llm=OpenAI(model_name=\"gpt-3.4-turbo\"),\n",
     "                                 chain_type=\"stuff\",\n",
     "                                 retriever=big_chunk_retriever)"
    ]
