--- a/examples/parent_document_retriever/main.ipynb
+++ b/examples/parent_document_retriever/main.ipynb
@@ -109,9 +109,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = (\n",
-    "    \"YOUR_API_KEY_HERE\"  # NEEDED if you run LLM Experiment below\n",
-    ")"
+    "os.environ[\n",
+    "    \"OPENAI_API_KEY\"\n",
+    "] = \"YOUR_API_KEY_HERE\"  # NEEDED if you run LLM Experiment below"
    ]
   },
   {
