added local llm tag

--- a/examples/movie-recommender/main.ipynb
+++ b/examples/movie-recommender/main.ipynb
@@ -78,15 +78,15 @@
   },
   {
    "cell_type": "code",
-   "source": [
-    "!wget https://files.grouplens.org/datasets/movielens/ml-latest-small.zip\n",
-    "!unzip ml-latest-small.zip"
-   ],
+   "execution_count": null,
    "metadata": {
     "id": "ozGYivrw8Gyg"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": [
+    "!wget https://files.grouplens.org/datasets/movielens/ml-latest-small.zip\n",
+    "!unzip ml-latest-small.zip"
+   ]
   },
   {
    "cell_type": "code",
@@ -1547,6 +1547,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get Recommendation for Movie of your Choice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_name = \"\"\n",
+    "get_recommendations(movie_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "zsXoZEBL7sGw"
    },
@@ -1555,15 +1572,6 @@
     "\n",
     "Of course, this won't be completely accurate. There are other ways improve the accuracy, such as `reducing the dimensions` of the original data, or filtering out users/movies with few ratings. But this is a good start to building a movie recommender system."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "3iTqwDNQ9WtD"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
