--- a/examples/SuperAgent_Autogen/main.ipynb
+++ b/examples/SuperAgent_Autogen/main.ipynb
@@ -99,9 +99,7 @@
    "source": [
     "import lancedb\n",
     "\n",
-    "embeddings = OpenAIEmbeddings(\n",
-    "    openai_api_key=\"sk-yourapikey\"\n",
-    ")"
+    "embeddings = OpenAIEmbeddings(openai_api_key=\"sk-yourapikey\")"
    ]
   },
   {
@@ -241,9 +239,7 @@
    "source": [
     "import lancedb\n",
     "\n",
-    "embeddings = OpenAIEmbeddings(\n",
-    "    openai_api_key=\"sk-yourapikey\"\n",
-    ")\n",
+    "embeddings = OpenAIEmbeddings(openai_api_key=\"sk-yourapikey\")\n",
     "\n",
     "db = lancedb.connect(\"/tmp/lancedb\")\n",
     "table = db.create_table(\n",
