--- a/examples/SuperAgent_Autogen/main.ipynb
+++ b/examples/SuperAgent_Autogen/main.ipynb
@@ -1,27 +1,13 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": []
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "This notebook  illustrates how you can use the langchain with custom pdf data & chat it using autogen agent"
-   ],
    "metadata": {
     "id": "lHFbPb4JU9xF"
-   }
+   },
+   "source": [
+    "This notebook  illustrates how you can use the langchain with custom pdf data & chat it using autogen agent"
+   ]
   },
   {
    "cell_type": "code",
@@ -35,8 +21,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m88.8/88.8 kB\u001b[0m \u001b[31m2.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m811.8/811.8 kB\u001b[0m \u001b[31m9.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
@@ -67,6 +53,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "0tLTTT9ucFEb"
+   },
+   "outputs": [],
    "source": [
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
@@ -75,62 +66,52 @@
     "from langchain.llms import OpenAI\n",
     "from langchain.chains import ConversationalRetrievalChain\n",
     "from langchain_community.vectorstores import LanceDB"
-   ],
-   "metadata": {
-    "id": "0tLTTT9ucFEb"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "ObNypsHRV3mz"
+   },
    "source": [
     "Requirements\n",
     "AutoGen requires Python>=3.8. To run this notebook example, please install pyautogen:\n"
-   ],
-   "metadata": {
-    "id": "ObNypsHRV3mz"
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "!pip install pyautogen"
-   ],
+   "execution_count": null,
    "metadata": {
     "id": "6RuVu12whCG0"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": [
+    "!pip install pyautogen"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "import lancedb\n",
-    "\n",
-    "embeddings = OpenAIEmbeddings(\n",
-    "    openai_api_key=\"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\"\n",
-    ")"
-   ],
+   "execution_count": null,
    "metadata": {
     "id": "sUFdvTyVh8xF"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": [
+    "import lancedb\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings(openai_api_key=\"sk-yourapikey\")"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
    "metadata": {
     "id": "kztlyFIXU8m-"
-   }
+   },
+   "source": []
   },
   {
    "cell_type": "code",
-   "source": [
-    "# !wget -O uniswap_v3.pdf https://uniswap.org/whitepaper-v3.pdf\n",
-    "!wget -O food.pdf https://pdf.usaid.gov/pdf_docs/PA00TBCT.pdf"
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -138,11 +119,10 @@
     "id": "ODKg12trdhX-",
     "outputId": "a7041322-f633-496c-a8e8-126a81cbb5d9"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "--2024-02-11 04:40:16--  https://pdf.usaid.gov/pdf_docs/PA00TBCT.pdf\n",
       "Resolving pdf.usaid.gov (pdf.usaid.gov)... 23.7.61.67, 2600:1408:ec00:380::1923, 2600:1408:ec00:38f::1923\n",
@@ -157,10 +137,17 @@
       "\n"
      ]
     }
+   ],
+   "source": [
+    "# !wget -O uniswap_v3.pdf https://uniswap.org/whitepaper-v3.pdf\n",
+    "!wget -O food.pdf https://pdf.usaid.gov/pdf_docs/PA00TBCT.pdf"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "1oC3NAFyd4Kb"
+   },
    "source": [
     "create OAI_CONFIG_LIST.json file in pwd & upload\n",
     "in it\n",
@@ -169,16 +156,18 @@
     "[\n",
     "   {\n",
     "     \"model\": \"gpt-4\",\n",
-    "     \"api_key\": \"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\"\n",
+    "     \"api_key\": \"sk-yourapikey\"\n",
     "   }\n",
     "]"
-   ],
-   "metadata": {
-    "id": "1oC3NAFyd4Kb"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "H1bRXWu-cE_C"
+   },
+   "outputs": [],
    "source": [
     "import autogen\n",
     "\n",
@@ -188,36 +177,36 @@
     "        \"model\": [\"gpt-4\"],\n",
     "    },\n",
     ")"
-   ],
-   "metadata": {
-    "id": "H1bRXWu-cE_C"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# create file name with OAI_CONFIG_LIT.json & put below authentications code"
-   ],
    "metadata": {
     "id": "yV0pNPiRPy8h"
-   }
+   },
+   "source": [
+    "# create file name with OAI_CONFIG_LIT.json & put below authentications code"
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "# create file name with OAI_CONFIG_LIT.\n",
-    "[{\"model\": \"gpt-4\", \"api_key\": \"sk-yourapikey\"}]"
-   ],
+   "execution_count": null,
    "metadata": {
     "id": "yWDhjTDMcFBi"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": [
+    "# create file name with OAI_CONFIG_LIT.\n",
+    "[{\"model\": \"gpt-4\", \"api_key\": \"sk-yourapikey\"}]"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "5gapqmsscFG-"
+   },
+   "outputs": [],
    "source": [
     "loaders = [PyPDFLoader(\"./food.pdf\")]\n",
     "docs = []\n",
@@ -225,21 +214,32 @@
     "    docs.extend(l.load())\n",
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000)\n",
     "docs = text_splitter.split_documents(docs)"
-   ],
-   "metadata": {
-    "id": "5gapqmsscFG-"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "5dLkCqa0dLXV",
+    "outputId": "28ab5984-c875-4281-95e5-d48bfdd12e99"
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.embeddings.openai.OpenAIEmbeddings` was deprecated in langchain-community 0.1.0 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAIEmbeddings`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
     "import lancedb\n",
     "\n",
-    "embeddings = OpenAIEmbeddings(\n",
-    "    openai_api_key=\"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\"\n",
-    ")\n",
+    "embeddings = OpenAIEmbeddings(openai_api_key=\"sk-yourapikey\")\n",
     "\n",
     "db = lancedb.connect(\"/tmp/lancedb\")\n",
     "table = db.create_table(\n",
@@ -255,38 +255,11 @@
     ")\n",
     "\n",
     "vectorstore = LanceDB.from_documents(docs, embeddings, connection=table)"
-   ],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "5dLkCqa0dLXV",
-    "outputId": "28ab5984-c875-4281-95e5-d48bfdd12e99"
-   },
-   "execution_count": null,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.embeddings.openai.OpenAIEmbeddings` was deprecated in langchain-community 0.1.0 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAIEmbeddings`.\n",
-      "  warn_deprecated(\n"
-     ]
-    }
    ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "qa = ConversationalRetrievalChain.from_llm(\n",
-    "    OpenAI(\n",
-    "        temperature=0,\n",
-    "        openai_api_key=\"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\",\n",
-    "    ),\n",
-    "    vectorstore.as_retriever(),\n",
-    "    memory=ConversationBufferMemory(memory_key=\"chat_history\", return_messages=True),\n",
-    ")"
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -294,37 +267,43 @@
     "id": "YMBoF5kucFMJ",
     "outputId": "13d7edab-5f3d-4698-fe6f-40f33dcd865a"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.llms.openai.OpenAI` was deprecated in langchain-community 0.0.10 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
       "  warn_deprecated(\n"
      ]
     }
+   ],
+   "source": [
+    "qa = ConversationalRetrievalChain.from_llm(\n",
+    "    OpenAI(\n",
+    "        temperature=0,\n",
+    "        openai_api_key=\"sk-yourapikey\",\n",
+    "    ),\n",
+    "    vectorstore.as_retriever(),\n",
+    "    memory=ConversationBufferMemory(memory_key=\"chat_history\", return_messages=True),\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "HjSVygLIcSEX"
+   },
+   "outputs": [],
    "source": [
     "def answer_food_question(question):\n",
     "    response = qa({\"question\": question})\n",
     "    return response[\"answer\"]"
-   ],
-   "metadata": {
-    "id": "HjSVygLIcSEX"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "question = \"what is good food\"\n",
-    "answer_food_question(question)"
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -333,36 +312,37 @@
     "id": "XCqxSaQSepsW",
     "outputId": "c1fc1bdc-9f2e-467b-cb51-fdde3fc964ae"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The function `__call__` was deprecated in LangChain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
       "  warn_deprecated(\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "' Good food is food that provides the recommended amounts of nutrients for the body to perform all its physiological activities. It is important to eat the right food, at the right time, in the right amounts, and prepared correctly in order to maintain a balanced diet and promote good nutrition. Good food is essential for physical and cognitive development and can improve overall health and quality of life.'"
-      ],
       "application/vnd.google.colaboratory.intrinsic+json": {
        "type": "string"
-      }
+      },
+      "text/plain": [
+       "' Good food is food that provides the recommended amounts of nutrients for the body to perform all its physiological activities. It is important to eat the right food, at the right time, in the right amounts, and prepared correctly in order to maintain a balanced diet and promote good nutrition. Good food is essential for physical and cognitive development and can improve overall health and quality of life.'"
+      ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "execution_count": 18
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "question = \"what is good food\"\n",
+    "answer_food_question(question)"
    ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "!pip install pyautogen"
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -370,11 +350,10 @@
     "id": "BY4Fz-l7cUCA",
     "outputId": "3a10b926-3659-46d3-d76b-7e083daf8fca"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Requirement already satisfied: pyautogen in /usr/local/lib/python3.10/dist-packages (0.1.14)\n",
       "Requirement already satisfied: diskcache in /usr/local/lib/python3.10/dist-packages (from pyautogen) (5.6.3)\n",
@@ -398,19 +377,27 @@
       "Requirement already satisfied: async-timeout<5.0,>=4.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai<1->pyautogen) (4.0.3)\n"
      ]
     }
+   ],
+   "source": [
+    "!pip install pyautogen"
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#### 4. Set up AutoGen user agent and assistant agent with function calling enabled."
-   ],
    "metadata": {
     "id": "anvuLAIycaqb"
-   }
+   },
+   "source": [
+    "#### 4. Set up AutoGen user agent and assistant agent with function calling enabled."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Vca8Y_khcUID"
+   },
+   "outputs": [],
    "source": [
     "llm_config = {\n",
     "    \"request_timeout\": 600,\n",
@@ -434,15 +421,15 @@
     "        }\n",
     "    ],\n",
     "}"
-   ],
-   "metadata": {
-    "id": "Vca8Y_khcUID"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "1XHjzIYAcfE7"
+   },
+   "outputs": [],
    "source": [
     "# create an AssistantAgent instance named \"assistant\"\n",
     "assistant = autogen.AssistantAgent(\n",
@@ -460,24 +447,11 @@
     "Otherwise, reply CONTINUE, or the reason why the task is not solved yet.\"\"\",\n",
     "    function_map={\"answer_food_question\": answer_food_question},\n",
     ")"
-   ],
-   "metadata": {
-    "id": "1XHjzIYAcfE7"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "# the assistant receives a message from the user, which contains the task description\n",
-    "user_proxy.initiate_chat(\n",
-    "    assistant,\n",
-    "    message=\"\"\"\n",
-    "what is good food?\n",
-    "\"\"\",\n",
-    ")"
-   ],
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -485,11 +459,10 @@
     "id": "hOZKxakHchZ4",
     "outputId": "7ca36fe0-a211-409a-abb0-57e3cd05e429"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "user_proxy (to assistant):\n",
       "\n",
@@ -532,20 +505,20 @@
       "--------------------------------------------------------------------------------\n"
      ]
     }
-   ]
-  },
-  {
-   "cell_type": "code",
+   ],
    "source": [
     "# the assistant receives a message from the user, which contains the task description\n",
     "user_proxy.initiate_chat(\n",
     "    assistant,\n",
     "    message=\"\"\"\n",
-    "please explain me essential minerals, sources, functions and symptoms of\n",
-    "deficiency?\n",
+    "what is good food?\n",
     "\"\"\",\n",
     ")"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -553,11 +526,10 @@
     "id": "UDXo2V06fNjz",
     "outputId": "37cf6766-9b68-4a81-e0c6-245d2af28a30"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "user_proxy (to assistant):\n",
       "\n",
@@ -606,31 +578,32 @@
       "--------------------------------------------------------------------------------\n"
      ]
     }
-   ]
-  },
-  {
-   "cell_type": "code",
+   ],
    "source": [
     "# the assistant receives a message from the user, which contains the task description\n",
     "user_proxy.initiate_chat(\n",
     "    assistant,\n",
     "    message=\"\"\"\n",
-    "which food Keeps eyes healthy ?\n",
+    "please explain me essential minerals, sources, functions and symptoms of\n",
+    "deficiency?\n",
     "\"\"\",\n",
     ")"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "id": "UrlFGYW0g0sJ",
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "id": "UrlFGYW0g0sJ",
     "outputId": "e82396e5-3dca-402c-889c-394557aeea0d"
    },
-   "execution_count": null,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "user_proxy (to assistant):\n",
       "\n",
@@ -682,16 +655,39 @@
       "--------------------------------------------------------------------------------\n"
      ]
     }
+   ],
+   "source": [
+    "# the assistant receives a message from the user, which contains the task description\n",
+    "user_proxy.initiate_chat(\n",
+    "    assistant,\n",
+    "    message=\"\"\"\n",
+    "which food Keeps eyes healthy ?\n",
+    "\"\"\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "source": [],
+   "execution_count": null,
    "metadata": {
     "id": "En6-kvjcjaid"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
