--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -23,12 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "e8a49c31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install -U langchain langchain-openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "66638d6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -qq openai==0.28 langchain==0.0.354 tiktoken unstructured pandas lancedb"
+    "! pip install -qq tiktoken unstructured pandas lancedb"
    ]
   },
   {
@@ -41,13 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "58ee1868",
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
     "import os\n",
+    "\n",
     "\n",
     "# Configuring the environment variable OPENAI_API_KEY\n",
     "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
@@ -56,7 +67,7 @@
     "    os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
     "openai.api_key = os.environ[\"OPENAI_API_KEY\"]\n",
     "\n",
-    "assert len(openai.Model.list()[\"data\"]) > 0"
+    "# assert len(openai.models.list()[\"data\"]) > 0"
    ]
   },
   {
@@ -78,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b55d22f1",
    "metadata": {},
    "outputs": [],
@@ -91,10 +102,9 @@
     "from pathlib import Path\n",
     "\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n",
-    "from langchain.embeddings import OpenAIEmbeddings\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.vectorstores import LanceDB\n",
-    "from langchain.llms import OpenAI\n",
+    "from langchain_openai import OpenAI, OpenAIEmbeddings\n",
     "from langchain.chains import RetrievalQA"
    ]
   },
@@ -117,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "7da77e75",
    "metadata": {},
    "outputs": [],
@@ -142,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "d171d062",
    "metadata": {},
    "outputs": [],
@@ -196,14 +206,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "f5f683a7-123b-4e9e-a60b-115bc1340a66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2699it [03:03, 14.72it/s]\n"
+     ]
+    }
+   ],
    "source": [
+    "from tqdm import tqdm\n",
+    "\n",
     "docs = []\n",
     "docs_path = Path(\"docs.pkl\")\n",
-    "for p in Path(\"numpy_docs\").rglob(\"*.html\"):\n",
+    "for p in tqdm(Path(\"numpy_docs\").rglob(\"*.html\")):\n",
     "    if p.is_dir():\n",
     "        continue\n",
     "    loader = UnstructuredHTMLLoader(p)\n",
@@ -227,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "c019d728-bb65-494a-b4a9-73a62bf8e155",
    "metadata": {},
    "outputs": [
@@ -237,7 +257,7 @@
        "2699"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "82230563",
    "metadata": {},
    "outputs": [],
@@ -278,29 +298,26 @@
    "source": [
     "# Storing\n",
     "\n",
-    "Let's connect to LanceDB so we can store our documents. We'll create a Table to store them in:"
+    "Let's connect to LanceDB Cloud so we can store our documents, It requires 0 setup !"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "74780a58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = lancedb.connect(\"lancedb\")\n",
-    "table = db.create_table(\n",
-    "    \"numpy_docs\",\n",
-    "    data=[\n",
-    "        {\n",
-    "            \"vector\": embeddings.embed_query(\"Hello World\"),\n",
-    "            \"text\": \"Hello World\",\n",
-    "            \"id\": \"1\",\n",
-    "        }\n",
-    "    ],\n",
-    "    mode=\"overwrite\",\n",
+    "vectorstore = LanceDB(\n",
+    "    embedding=embeddings,\n",
+    "    uri = \"db://test\", # your remote database URI\n",
+    "    api_key=\"sk_...\",\n",
+    "    region=\"us-east-x-xxx\", # the cloud region you have configured \n",
+    "    table_name=\"langchain_vectorstore\",  # Optional, defaults to \"vectors\"\n",
+    "    mode=\"overwrite\", # Optional, defaults to \"overwrite\"\n",
     ")\n",
-    "docsearch = LanceDB.from_documents(documents, embeddings, connection=table)"
+    "\n",
+    "doc_ids = vectorstore.add_documents(documents=documents)"
    ]
   },
   {
@@ -313,13 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "6a5891ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "qa = RetrievalQA.from_chain_type(\n",
-    "    llm=OpenAI(), chain_type=\"stuff\", retriever=docsearch.as_retriever()\n",
+    "    llm=OpenAI(), chain_type=\"stuff\", retriever=vectorstore.as_retriever()\n",
     ")"
    ]
   },
@@ -341,68 +358,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "70d88316",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' The NumPy library is an open source Python library that is used in many fields of science and engineering. It provides efficient data structures for multidimensional arrays and matrices, along with a vast array of mathematical functions to operate on them. It is a core component of the scientific Python and PyData ecosystems, and is used by everyone from beginners to experienced researchers in various applications. It is also interoperable with other Python libraries such as SciPy, Pandas, and OpenCV, making it a crucial tool for scientific computing in Python. '"
+       "{'query': 'tell me about the numpy library?',\n",
+       " 'result': ' The NumPy library is a Python library that provides multidimensional array and matrix data structures. It is used for efficient mathematical operations on arrays and matrices, and it also offers a wide range of high-level mathematical functions. It is a fundamental library for scientific computing in Python and is used extensively in many other data science and scientific packages such as Pandas, SciPy, and OpenCV. It is known for its speed and performance, and is used by everyone from beginners to experienced researchers in various fields of science and engineering.'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query = \"tell me about the numpy library?\"\n",
-    "qa.run(query)"
+    "qa.invoke(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "85a0397c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n\\n1.22.0'"
+       "{'query': \"What's the current version of numpy?\",\n",
+       " 'result': ' The current version of NumPy is 1.21.6, according to the context provided.'}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query = \"What's the current version of numpy?\"\n",
-    "qa.run(query)"
+    "qa.invoke(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "923f86c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' Linear algebra operations can be performed using the numpy.linalg library.'"
+       "{'query': 'What kind of linear algebra related operations can be done in numpy?',\n",
+       " 'result': ' Numpy provides a variety of linear algebra related operations, including decompositions, matrix eigenvalues, norms and other numbers, solving equations and inverting matrices, and linear algebra on several matrices at once.'}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query = \"What kind of linear algebra related operations can be done in numpy?\"\n",
-    "qa.run(query)"
+    "qa.invoke(query)"
    ]
   },
   {
@@ -436,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
