--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b55d22f1",
    "metadata": {},
    "outputs": [],
@@ -206,18 +206,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f5f683a7-123b-4e9e-a60b-115bc1340a66",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2699it [03:03, 14.72it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
@@ -247,21 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c019d728-bb65-494a-b4a9-73a62bf8e155",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2699"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(docs)"
    ]
@@ -278,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "82230563",
    "metadata": {},
    "outputs": [],
@@ -298,7 +279,15 @@
    "source": [
     "# Storing\n",
     "\n",
-    "Let's connect to LanceDB Cloud so we can store our documents, It requires 0 setup !"
+    "Let's connect to LanceDB so we can store our documents, It requires 0 setup !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ed0c792",
+   "metadata": {},
+   "source": [
+    "### For LanceDB cloud use the below cell :"
    ]
   },
   {
@@ -310,14 +299,32 @@
    "source": [
     "vectorstore = LanceDB(\n",
     "    embedding=embeddings,\n",
-    "    uri = \"db://test\", # your remote database URI\n",
+    "    uri=\"db://test\",  # your remote database URI\n",
     "    api_key=\"sk_...\",\n",
-    "    region=\"us-east-x-xxx\", # the cloud region you have configured \n",
+    "    region=\"us-east-x-xxx\",  # the cloud region you have configured\n",
     "    table_name=\"langchain_vectorstore\",  # Optional, defaults to \"vectors\"\n",
-    "    mode=\"overwrite\", # Optional, defaults to \"overwrite\"\n",
+    "    mode=\"overwrite\",  # Optional, defaults to \"overwrite\"\n",
     ")\n",
     "\n",
     "doc_ids = vectorstore.add_documents(documents=documents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d6cf585",
+   "metadata": {},
+   "source": [
+    "### For LanceDB local use the below cell :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "71e15e3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorstore = LanceDB.from_documents(documents=documents, embedding=embeddings)"
    ]
   },
   {
@@ -330,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "6a5891ad",
    "metadata": {},
    "outputs": [],
@@ -358,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "70d88316",
    "metadata": {},
    "outputs": [
@@ -366,10 +373,10 @@
      "data": {
       "text/plain": [
        "{'query': 'tell me about the numpy library?',\n",
-       " 'result': ' The NumPy library is a Python library that provides multidimensional array and matrix data structures. It is used for efficient mathematical operations on arrays and matrices, and it also offers a wide range of high-level mathematical functions. It is a fundamental library for scientific computing in Python and is used extensively in many other data science and scientific packages such as Pandas, SciPy, and OpenCV. It is known for its speed and performance, and is used by everyone from beginners to experienced researchers in various fields of science and engineering.'}"
+       " 'result': ' The NumPy library is an open-source Python library that provides efficient data structures and mathematical functions for working with multidimensional arrays and matrices. It is widely used in the fields of science and engineering and is a fundamental component of the scientific Python ecosystem. It can be installed using a scientific Python distribution or through the use of pip or conda. '}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,14 +437,8 @@
    "id": "f8958d1b-0ad6-44d6-bca0-d81771c564a1",
    "metadata": {},
    "source": [
-    "Thanks"
+    "Thanks !"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e6a53efb",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
