--- a/examples/Code-Documentation-QA-Bot/lancedb_cloud/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/lancedb_cloud/main.ipynb
@@ -77,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "openai_api_key = \"sk-...\" # @param {type:\"string\"}"
+    "openai_api_key = \"sk-...\"  # @param {type:\"string\"}"
    ]
   },
   {
@@ -141,8 +141,8 @@
     "from langchain_openai import OpenAI, OpenAIEmbeddings\n",
     "from langchain.chains import RetrievalQA\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"]= openai_api_key\n",
-    "assert openai.models.list() is not None\n"
+    "os.environ[\"OPENAI_API_KEY\"] = openai_api_key\n",
+    "assert openai.models.list() is not None"
    ]
   },
   {
