llamaindex saas example

--- a/examples/Code-Documentation-QA-Bot/lancedb_cloud/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/lancedb_cloud/main.ipynb
@@ -20,7 +20,7 @@
     "id": "wgPbKbpumkhH"
    },
    "source": [
-    "## Credentials\n",
+    "### Credentials\n",
     "\n",
     "Copy and paste the project name and the api key from your project page.\n",
     "These will be used later to [connect to LanceDB Cloud](#scroll-to=5q8m6GMD7sGu)"
@@ -151,7 +151,7 @@
     "id": "8eKRYd2F7v5n"
    },
    "source": [
-    "# Get the data\n",
+    "### Get the data\n",
     "To make this easier, we've downloaded Numpy documentation and stored the raw HTML files for you to download. Once the docs are downloaded, we then use LangChain's HTML document readers to parse them and store them in LanceDB as a vector store, along with relevant metadata.\n",
     "By default we use numpy docs, but you can replace this with your own docs as well."
    ]
@@ -218,7 +218,7 @@
     "id": "PCufm9Xr8eWp"
    },
    "source": [
-    "# Pre-processing and loading the documents\n",
+    "### Pre-processing and loading the documents\n",
     "\n",
     "Next, let's pre-process and load the documents. To make sure we don't need to do this repeatedly while updating code, we're caching it using pickle so it can be retrieved again (this could take a few minutes to run the first time you do it). We'll also add extra metadata to the docs here such as the title and version of the code:\n",
     "\n",
@@ -278,7 +278,7 @@
     "id": "cntAuaUU_TER"
    },
    "source": [
-    "# Generating emebeddings from our docs\n",
+    "### Generating emebeddings from our docs\n",
     "\n",
     "Now that we have our raw documents loaded, we need to pre-process them to generate embeddings:"
    ]
@@ -305,7 +305,7 @@
     "id": "IiM4DJvC_2dV"
    },
    "source": [
-    "# Store data in LanceDB Cloud\n",
+    "### Store data in LanceDB Cloud\n",
     "\n",
     "Let's connect to LanceDB so we can store our documents, It requires 0 setup !"
    ]
@@ -370,7 +370,7 @@
     "id": "7SKSlyq2iwpK"
    },
    "source": [
-    "# Query"
+    "### Query"
    ]
   },
   {
