--- a/examples/LlamaIndex-demo/lancedb_cloud/main.ipynb
+++ b/examples/LlamaIndex-demo/lancedb_cloud/main.ipynb
@@ -113,6 +113,7 @@
     "import openai\n",
     "import logging\n",
     "import sys\n",
+    "\n",
     "# Uncomment to see debug logs\n",
     "# logging.basicConfig(stream=sys.stdout, level=logging.DEBUG)\n",
     "# logging.getLogger().addHandler(logging.StreamHandler(stream=sys.stdout))\n",
@@ -145,7 +146,7 @@
    "source": [
     "! mkdir -p 'data/paul_graham/'\n",
     "! wget 'https://raw.githubusercontent.com/run-llama/llama_index/main/docs/docs/examples/data/paul_graham/paul_graham_essay.txt' -O 'data/paul_graham/paul_graham_essay.txt'\n",
-    "! ls 'data/paul_graham/'\n"
+    "! ls 'data/paul_graham/'"
    ]
   },
   {
@@ -166,7 +167,7 @@
    "outputs": [],
    "source": [
     "documents = SimpleDirectoryReader(\"data/paul_graham/\").load_data()\n",
-    "print(\"Document ID:\", documents[0].doc_id, \"Document Hash:\", documents[0].hash)\n"
+    "print(\"Document ID:\", documents[0].doc_id, \"Document Hash:\", documents[0].hash)"
    ]
   },
   {
@@ -218,9 +219,7 @@
    "source": [
     "storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
     "\n",
-    "index = VectorStoreIndex.from_documents(\n",
-    "    documents, storage_context=storage_context\n",
-    ")"
+    "index = VectorStoreIndex.from_documents(documents, storage_context=storage_context)"
    ]
   },
   {
@@ -257,15 +256,15 @@
     "    MetadataFilter,\n",
     ")\n",
     "\n",
-    "date = datetime.today().strftime('%Y-%m-%d')\n",
+    "date = datetime.today().strftime(\"%Y-%m-%d\")\n",
     "query_filters = MetadataFilters(\n",
     "    filters=[\n",
     "        MetadataFilter(\n",
-    "            key=\"creation_date\", operator=FilterOperator.EQ, value=date  #using current date as the latest data is scraped\n",
+    "            key=\"creation_date\",\n",
+    "            operator=FilterOperator.EQ,\n",
+    "            value=date,  # using current date as the latest data is scraped\n",
     "        ),\n",
-    "        MetadataFilter(\n",
-    "            key=\"file_size\", value=75040, operator=FilterOperator.GT\n",
-    "        ),\n",
+    "        MetadataFilter(key=\"file_size\", value=75040, operator=FilterOperator.GT),\n",
     "    ],\n",
     "    condition=FilterCondition.AND,\n",
     ")"
