--- a/tutorials/RAG-from-Scratch/RAG_from_Scratch.ipynb
+++ b/tutorials/RAG-from-Scratch/RAG_from_Scratch.ipynb
@@ -619,7 +619,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
